# homeassistant-tankerkoenig

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  manifest.json  prek.toml  pyproject.toml  sensor.py
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
custom_components/tankerkoenig/: manifest.json  sensor.py
tests/: __init__.py  conftest.py  test_sensor.py
