[project]
name = "homeassistant-tankerkoenig"
version = "0.8.0"
description = "Custom Home Assistant component to retrieve gas station information from Tankerkönig"
requires-python = ">=3.14.2,<4.0"
dependencies = [
    "homeassistant>=2026.4.2",
    "requests>=2.33.1",
]
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "requests-mock>=1.12.1",
]

[tool.ruff]
required-version = ">=0.15.1"
target-version = "py314"
exclude = [".github"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long — handled by ruff-format
]

[tool.ruff.lint.isort]
known-third-party = ["homeassistant"]
combine-as-imports = true
force-sort-within-sections = true

[tool.codespell]
ignore-words-list = 'hass'
check-filenames = true

[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "normal"
strict = true
strict_equality = true
local_partial_types = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["import-untyped"]
